--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "unist-util-visit": "^4.0.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "12.1.4",
+    "@next/bundle-analyzer": "^13.5.3",
     "@svgr/webpack": "^6.1.2",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
